# dungeon_master_AI

./: .env-example  README.md  demo.py  main.py  pyproject.toml
docs/: PLAN.md  PRD.md  TODO.md
saves/: game.json
src/: agent.py  compactor.py  config.py  gatekeeper.py  gui_center.py  gui_main.py  gui_panels.py  gui_rtl.py  sdk.py  state.py  tools.py  watchdog.py
tests/: test_compactor.py  test_gatekeeper.py  test_sdk.py  test_state.py  test_watchdog.py
