[project]
name = "dungeon-master-ai"
version = "0.1.0"
description = "LLM-powered Hebrew Dungeon Master text adventure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "python-bidi>=0.6.10",
    "python-dotenv>=1.0.0",
]

[project.scripts]
dungeon-master = "main:main"

[tool.ruff]
line-length = 150

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
